Change CV link to link to Linkedin

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </li>
           <li>
             <a
-              href="./upload/CV.pdf"
+              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
               target="_blank"
               title="CV"
               rel="noreferrer"
@@ -77,12 +77,11 @@
         <header class="showcase">
           <h2>Hei!</h2>
           <p>
-            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, mySQL, 
+            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, mySQL,
             Wordpress, HTML, CSS, Javascript, React, Redux, Docker og mye mer.
           </p>
           <p></p>
         </header>
-        
       </section>
 
       <!-- Bokser Seksjon -->
@@ -95,9 +94,9 @@
           <i class="fab fa-css3 fa-4x"></i>
 
           <p>
-            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og Javascript. Jeg
-            har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg har
-            arbeidet frilans via
+            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og Javascript.
+            Jeg har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg
+            har arbeidet frilans via
             <a
               href="https://www.fiverr.com/w3bdesign"
               rel="noreferrer"
@@ -146,25 +145,33 @@
             ><i class="fab fa-linkedin fa-4x"></i
           ></a>
           <p>
-          Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis du er interessert kan du ta en titt <a
-          href="https://github.com/w3bdesign"
-          target="_blank"
-          title="Github"
-          rel="noreferrer"
-          aria-label="Github"
-          > HER</a></p>
-                   
-          <p>Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin konto 
-          <a
-            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
-            target="_blank"
-            title="Linkedin"
-            rel="noreferrer"
-            aria-label="Linkedin"
-            > HER</a></p>
+            Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis du
+            er interessert kan du ta en titt
+            <a
+              href="https://github.com/w3bdesign"
+              target="_blank"
+              title="Github"
+              rel="noreferrer"
+              aria-label="Github"
+            >
+              HER</a
+            >
+          </p>
+
+          <p>
+            Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin
+            konto
+            <a
+              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+              target="_blank"
+              title="Linkedin"
+              rel="noreferrer"
+              aria-label="Linkedin"
+            >
+              HER</a
+            >
+          </p>
         </div>
-
-
       </section>
 
       <!-- Bunn / footer -->
