--- a/portefølje.html
+++ b/portefølje.html
@@ -54,7 +54,7 @@
           </li>
           <li>
             <a
-              href="./upload/CV.pdf"
+              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
               target="_blank"
               title="CV"
               rel="noreferrer"
@@ -78,9 +78,13 @@
       <section class="portfolio-header reveal">
         <h3>Javascript / React</h3>
       </section>
-      
+
       <section class="portfolio-header reveal">
-        <h4>Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med siden. </h4>
+        <h4>
+          Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i
+          nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med
+          siden.
+        </h4>
       </section>
 
       <section class="portfolio">
