--- a/kontakt.html
+++ b/kontakt.html
@@ -45,7 +45,9 @@
       <nav class="main-nav">
         <ul>
           <li>
-            <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+            <a href="index.html" title="Hjem" class="main-nav-hjem fade"
+              >Hjem</a
+            >
           </li>
           <li>
             <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
@@ -54,7 +56,7 @@
           </li>
           <li>
             <a
-              href="./upload/CV.pdf"
+              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
               target="_blank"
               title="CV"
               rel="noreferrer"
@@ -93,13 +95,23 @@
               <label for="text">
                 Fullt navn
                 <br />
-                <input id="text" name="navn" type="text" placeholder="Fullt navn" />
+                <input
+                  id="text"
+                  name="navn"
+                  type="text"
+                  placeholder="Fullt navn"
+                />
               </label>
 
               <label for="phone"
                 >Telefon
                 <br />
-                <input id="phone" name="telefon" type="text" placeholder="Telefon" />
+                <input
+                  id="phone"
+                  name="telefon"
+                  type="text"
+                  placeholder="Telefon"
+                />
               </label>
             </fieldset>
 
@@ -112,7 +124,7 @@
             </fieldset>
 
             <button type="submit" class="btn fade">Send skjema</button>
-            <br/>&nbsp;
+            <br />&nbsp;
             <div class="captcha" data-netlify-recaptcha="true"></div>
           </form>
         </div>
