Add SEO meta tags

--- a/portefølje.html
+++ b/portefølje.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="Description" content="Portefølje" />
     <link rel="stylesheet" type="text/css" href="scss/styles.css" />
     <link
       rel="stylesheet"
@@ -21,6 +20,20 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
+    <!-- SEO Meta tags -->
+    <meta name="title" content="Portefølje Daniel Fjeldstad" />
+    <meta
+      name="description"
+      content="Portefølje for Daniel Fjeldstad, en webutvikler med lang erfaring med PHP, mySQL, Wordpress, Javascript, React med mer."
+    />
+    <meta
+      name="keywords"
+      content="php, javascript, portefølje, webutvikler, react, linkedin"
+    />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta name="language" content="no" />
+    <meta name="revisit-after" content="3 days" />
 
     <title>Portefølje</title>
   </head>
