Shortened meta description

--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
     <meta name="title" content="Portefølje Daniel Fjeldstad" />
     <meta
       name="description"
-      content="Portefølje for Daniel Fjeldstad, en webutvikler med lang erfaring med PHP, mySQL, Wordpress, Javascript, React med mer."
+      content="Portefølje for Daniel Fjeldstad. PHP, mySQL, Wordpress, Javascript, React med mer."
     />
     <meta
       name="keywords"
