Minor media query tweaks
Align Les mer boxes better

--- a/portefølje.html
+++ b/portefølje.html
@@ -32,7 +32,7 @@
     />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <meta name="language" content="no" />
+    <meta name="language" content="Norwegian" />
     <meta name="revisit-after" content="3 days" />
 
     <title>Portefølje</title>
@@ -168,7 +168,9 @@
             ><img src="./img/stylechild.jpg" alt="Style Child bilde"
           /></a>
           <p>Nettbutikk med Woocommerce og Pckasse integrasjon.</p>
-          <p>&nbsp;</p>
+          <p>
+            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med mer.
+          </p>
           <a
             href="https://www.stylechild.no/"
             target="_blank"
@@ -191,7 +193,9 @@
             Tidligere en nettbutikk med Magento 1.9, er nå nettbutikk med
             Woocommerce og Pckasse integrasjon.
           </p>
-          <p>&nbsp;</p>
+          <p>
+            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med mer.
+          </p>
           <a
             href="https://minhestebutikk.no/"
             target="_blank"
