--- a/portefølje.html
+++ b/portefølje.html
@@ -88,11 +88,11 @@
       </nav>
 
       <!-- Portefølje -->
-      <section class="portfolio-header reveal">
+      <section class="portfolio-header">
         <h3>Javascript / React</h3>
       </section>
 
-      <section class="portfolio-header reveal">
+      <section class="portfolio-header">
         <h4>
           Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i
           nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med
@@ -101,7 +101,7 @@
       </section>
 
       <section class="portfolio">
-        <div class="boks port-1 reveal">
+        <div class="boks port-1">
           <i class="fab fa-js fa-4x"></i>
           <h3>Statens Vegvesen</h3>
           <a
