--- a/kontakt.html
+++ b/kontakt.html
@@ -90,11 +90,11 @@
       </nav>
 
       <!-- Portefølje -->
-      <section class="portfolio-header reveal">
+      <section class="portfolio-header">
         <h3>Kontaktskjema</h3>
       </section>
 
-      <section class="kontakt reveal">
+      <section class="kontakt">
         <div class="kontakt-div">
           <form
             name="kontaktskjema"
@@ -144,19 +144,10 @@
       </section>
 
       <!-- Bunn / footer -->
-      <footer class="reveal">
+      <footer>
         <p>Daniel &copy; 2020</p>
       </footer>
     </div>
-    <!-- Wrapper Slutt -->
-
-    <!-- Inkluder GSAP for animasjoner -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.4/gsap.min.js"></script>
-
-    <!-- Inkluder ScrollMagic -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
-
-    <script src="./js/animation.js"></script>
+    <!-- Wrapper Slutt -->    
   </body>
 </html>
