--- a/kontakt.html
+++ b/kontakt.html
@@ -101,7 +101,8 @@
             method="POST"
             data-netlify="true"
             class="pure-form"
-            data-netlify-recaptcha="true"
+            netlify-honeypot="bot-field"
+           
           >
             <fieldset class="pure-group">
               <h4>Vennligst fyll ut skjemaet under</h4>
@@ -138,7 +139,7 @@
 
             <button type="submit" class="btn fade">Send skjema</button>
             <br />&nbsp;
-            <div class="captcha" data-netlify-recaptcha="true"></div>
+            <label style="position: absolute; display: none;">Don’t fill this out if you're human: <input name="bot-field" /></label>
           </form>
         </div>
       </section>
