--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="iso-8959-1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />    
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Dfweb Portef&oslash;lje" />
+    <meta property="og:site_name" content="Dfweb.no" />
+    <meta property="og:url" content="www.dfweb.no" />
+    <meta property="og:image" content="" />
+    <meta property="article:published_time" content="2020-02-04" />
+    <meta property="article:author" content="Daniel" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
     <link
       rel="stylesheet"
@@ -21,27 +28,27 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- SEO Meta tags -->
-    <meta name="title" content="PortefÃ¸lje Daniel Fjeldstad" />
+    <meta name="title" content="Portefølje Daniel Fjeldstad" />
     <meta
       name="description"
-      content="PortefÃ¸lje for Daniel Fjeldstad. PHP, mySQL, Wordpress, Javascript, React med mer."
+      content="Portefølje for Daniel Fjeldstad. PHP, mySQL, Wordpress, Javascript, React med mer."
     />
     <meta
       name="keywords"
-      content="php, javascript, portefÃ¸lje, webutvikler, react, linkedin"
+      content="php, javascript, portefølje, webutvikler, react, linkedin"
     />
     <meta name="robots" content="index, follow" />
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="language" content="no" />
     <meta name="revisit-after" content="3 days" />
 
-    <title>PortefÃ¸lje</title>
+    <title>Portefølje</title>
   </head>
 
   <body>
     <div class="ieonly" style="display: none;">
       <h1>
-        Beklager, men vi stÃ¸tter ikke IE11 eller eldre nettlesere<br />Vennligst
+        Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst
         bytt til
         <a
           href="https://www.mozilla.org/nb-NO/firefox/new/"
@@ -59,8 +66,8 @@
             <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
           </li>
           <li>
-            <a href="portefÃ¸lje.html" title="Om meg" class="main-nav-ommeg fade"
-              >PortefÃ¸lje</a
+            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
+              >Portefølje</a
             >
           </li>
           <li>
@@ -116,25 +123,25 @@
               title="Fiverr"
               >Fiverr</a
             >
-            og kan skilte med 100% positiv tilbakemelding pÃ¥ samtlige oppdrag.
+            og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
           </p>
-          <p>Har ogsÃ¥ erfaring med Opencart og Magento.</p>
+          <p>Har også erfaring med Opencart og Magento.</p>
 
           <p>
-            Jeg har ogsÃ¥ erfaring med andre teknologier som React, moderne
+            Jeg har også erfaring med andre teknologier som React, moderne
             Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
             med mer.
           </p>
           <p>
-            PÃ¥
+            På
             <a
-              href="portefÃ¸lje.html"
-              title="PortefÃ¸lje link"
+              href="portefølje.html"
+              title="Portefølje link"
               rel="noreferrer"
-              aria-label="PortefÃ¸lje link"
-              >PortefÃ¸lje</a
+              aria-label="Portefølje link"
+              >Portefølje</a
             >
-            kan du se eksempler pÃ¥ arbeid jeg har gjort i 2019 og 2020.
+            kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
           </p>
         </div>
 
@@ -172,7 +179,7 @@
           </p>
 
           <p>
-            Hvis du Ã¸nsker Ã¥ se min oppdaterte CV kan du besÃ¸ke min Linkedin
+            Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin
             konto
             <a
               href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
