--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       content="php, javascript, portefølje, webutvikler, react, linkedin"
     />
     <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
     <meta name="language" content="no" />
     <meta name="revisit-after" content="3 days" />
 
