<meta http-equiv="content-type" content="text/html; charset=UTF-8" />

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
-    <meta charset="iso-8859-1" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:type" content="article" />
@@ -28,26 +28,26 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <!-- SEO Meta tags -->
-    <meta name="title" content="Portefølje Daniel Fjeldstad" />
+    <meta name="title" content="PortefÃ¸lje Daniel Fjeldstad" />
     <meta
       name="description"
-      content="Portefølje for Daniel Fjeldstad. PHP, mySQL, Wordpress, Javascript, React med mer."
+      content="PortefÃ¸lje for Daniel Fjeldstad. PHP, mySQL, Wordpress, Javascript, React med mer."
     />
     <meta
       name="keywords"
-      content="php, javascript, portefølje, webutvikler, react, linkedin"
+      content="php, javascript, portefÃ¸lje, webutvikler, react, linkedin"
     />
     <meta name="robots" content="index, follow" />    
     <meta name="language" content="no" />
     <meta name="revisit-after" content="3 days" />
 
-    <title>Portefølje</title>
+    <title>PortefÃ¸lje</title>
   </head>
 
   <body>
     <div class="ieonly" style="display: none;">
       <h1>
-        Beklager, men vi støtter ikke IE11 eller eldre nettlesere<br />Vennligst
+        Beklager, men vi stÃ¸tter ikke IE11 eller eldre nettlesere<br />Vennligst
         bytt til
         <a
           href="https://www.mozilla.org/nb-NO/firefox/new/"
@@ -65,8 +65,8 @@
             <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
           </li>
           <li>
-            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
-              >Portefølje</a
+            <a href="portefÃ¸lje.html" title="Om meg" class="main-nav-ommeg fade"
+              >PortefÃ¸lje</a
             >
           </li>
           <li>
@@ -122,25 +122,25 @@
               title="Fiverr"
               >Fiverr</a
             >
-            og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
+            og kan skilte med 100% positiv tilbakemelding pÃ¥ samtlige oppdrag.
           </p>
-          <p>Har også erfaring med Opencart og Magento.</p>
+          <p>Har ogsÃ¥ erfaring med Opencart og Magento.</p>
 
           <p>
-            Jeg har også erfaring med andre teknologier som React, moderne
+            Jeg har ogsÃ¥ erfaring med andre teknologier som React, moderne
             Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
             med mer.
           </p>
           <p>
-            På
+            PÃ¥
             <a
-              href="portefølje.html"
-              title="Portefølje link"
+              href="portefÃ¸lje.html"
+              title="PortefÃ¸lje link"
               rel="noreferrer"
-              aria-label="Portefølje link"
-              >Portefølje</a
+              aria-label="PortefÃ¸lje link"
+              >PortefÃ¸lje</a
             >
-            kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
+            kan du se eksempler pÃ¥ arbeid jeg har gjort i 2019 og 2020.
           </p>
         </div>
 
@@ -178,7 +178,7 @@
           </p>
 
           <p>
-            Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin
+            Hvis du Ã¸nsker Ã¥ se min oppdaterte CV kan du besÃ¸ke min Linkedin
             konto
             <a
               href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
