--- a/kontakt.html
+++ b/kontakt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
@@ -33,7 +33,6 @@
       content="php, javascript, portefølje, webutvikler, react, linkedin"
     />
     <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="language" content="no" />
     <meta name="revisit-after" content="3 days" />
 
@@ -102,7 +101,6 @@
             data-netlify="true"
             class="pure-form"
             netlify-honeypot="bot-field"
-           
           >
             <fieldset class="pure-group">
               <h4>Vennligst fyll ut skjemaet under</h4>
@@ -139,7 +137,9 @@
 
             <button type="submit" class="btn fade">Send skjema</button>
             <br />&nbsp;
-            <label style="position: absolute; display: none;">Don’t fill this out if you're human: <input name="bot-field" /></label>
+            <label style="position: absolute; display: none;"
+              >Don’t fill this out if you're human: <input name="bot-field"
+            /></label>
           </form>
         </div>
       </section>
@@ -149,6 +149,6 @@
         <p>Daniel &copy; 2020</p>
       </footer>
     </div>
-    <!-- Wrapper Slutt -->    
+    <!-- Wrapper Slutt -->
   </body>
 </html>
