--- a/portefølje.html
+++ b/portefølje.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="no">
   <head>
-    <meta charset="UTF-8" />
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="scss/styles.css" />
@@ -31,7 +31,6 @@
       content="php, javascript, portefølje, webutvikler, react, linkedin"
     />
     <meta name="robots" content="index, follow" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
     <meta name="language" content="Norwegian" />
     <meta name="revisit-after" content="3 days" />
 
@@ -169,7 +168,8 @@
           /></a>
           <p>Nettbutikk med Woocommerce og Pckasse integrasjon.</p>
           <p>
-            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med mer.
+            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
+            mer.
           </p>
           <a
             href="https://www.stylechild.no/"
@@ -194,7 +194,8 @@
             Woocommerce og Pckasse integrasjon.
           </p>
           <p>
-            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med mer.
+            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
+            mer.
           </p>
           <a
             href="https://minhestebutikk.no/"
