Add OpenGraph tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Dfweb Portef&oslash;lje" />
+    <meta property="og:title" content="Dfweb Portefølje" />
     <meta property="og:site_name" content="Dfweb.no" />
     <meta property="og:url" content="www.dfweb.no" />
     <meta property="og:image" content="" />
