--- a/kontakt.html
+++ b/kontakt.html
@@ -2,6 +2,13 @@
 <html lang="no">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Dfweb Portefølje" />
+    <meta property="og:site_name" content="Dfweb.no" />
+    <meta property="og:url" content="www.dfweb.no" />
+    <meta property="og:image" content="" />
+    <meta property="article:published_time" content="2020-02-04" />
+    <meta property="article:author" content="Daniel" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
