--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <meta property="article:published_time" content="2020-02-04" />
     <meta property="article:author" content="Daniel" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/bundle.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
