--- a/kontakt.html
+++ b/kontakt.html
@@ -12,8 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/bundle.min.css" />
     <!-- Rensket med PurgeCSS -->
     <link rel="stylesheet" href="./css/purecss.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
