Revert "Remove bundled CSS"
This reverts commit c149c50ad72228f974b8a31dd1a7fce7d6a60b21.

--- a/portefølje.html
+++ b/portefølje.html
@@ -12,7 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" type="text/css" href="scss/styles.css" />
-    <link rel="stylesheet" type="text/css" href="./css/bundle.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/all.min.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -151,7 +152,7 @@
           >
         </div>
       </section>
-      <section class="portfolio-header">
+      <section class="portfolio-header reveal">
         <h3>Woocommerce</h3>
       </section>
 
