Add basic form validation
Set required and require a number on phone input

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/animation.gsap.min.js"></script>
 
+    <!-- Animasjoner -->
     <script src="./js/animation.js"></script>
   </body>
 </html>
