--- a/portefølje.html
+++ b/portefølje.html
@@ -229,7 +229,8 @@
     <!-- Inkluder ScrollMagic -->
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/animation.gsap.min.js"></script>
-
+    
+    <!-- Animasjoner -->
     <script src="./js/animation.js"></script>
   </body>
 </html>
