Add proper phone number check
Add proper phone number check with HTML regex pattern

--- a/kontakt.html
+++ b/kontakt.html
@@ -123,10 +123,11 @@
                 <input
                   id="phone"
                   name="telefon"
-                  type="number"
+                  type="text"
                   placeholder="Telefon"
                   required="true"
                   aria-required="true"
+                  pattern=".[0-9]{7}"
                 />
               </label>
             </fieldset>
