--- a/kontakt.html
+++ b/kontakt.html
@@ -118,7 +118,7 @@
               </label>
 
               <label for="phone"
-                >Telefon
+                >Telefon (uten mellomrom)
                 <br />
                 <input
                   id="phone"
