Show Woocommerce section

--- a/portefølje.html
+++ b/portefølje.html
@@ -152,7 +152,7 @@
           >
         </div>
       </section>
-      <section class="portfolio-header reveal">
+      <section class="portfolio-header">
         <h3>Woocommerce</h3>
       </section>
 
@@ -229,7 +229,7 @@
     <!-- Inkluder ScrollMagic -->
     <script src="./js/ScrollMagic.min.js"></script>
     <script src="./js/animation.gsap.min.js"></script>
-    
+
     <!-- Animasjoner -->
     <script src="./js/animation.js"></script>
   </body>
