Replace Fontawesome JS with Wordpress

--- a/portefølje.html
+++ b/portefølje.html
@@ -158,7 +158,7 @@
 
       <section class="portfolio">
         <div class="boks port-4 reveal">
-          <i class="fab fa-js fa-4x"></i>
+          <i class="fab fa-wordpress fa-4x"></i>
           <h3>Style Child</h3>
           <a
             href="https://www.stylechild.no/"
@@ -181,7 +181,7 @@
         </div>
 
         <div class="boks port-5 reveal">
-          <i class="fab fa-js fa-4x"></i>
+          <i class="fab fa-wordpress fa-4x"></i>
           <h3>Minhestebutikk</h3>
           <a
             href="https://minhestebutikk.no/"
