Add noscript warning
<div class="noscript">Din nettleser støttter ikke Javascript.Vennligst bruk en annen nettleser for å se denne nettsiden optimalt.</div>

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         >
       </h1>
     </div>
+    <noscript>
+     <div class="noscript">Din nettleser støttter ikke Javascript.Vennligst bruk en annen nettleser for å se denne nettsiden optimalt.</div> 
+    </noscript>
     <div class="wrapper">
       <!-- Navigasjon -->
       <nav class="main-nav">
