--- a/portefølje.html
+++ b/portefølje.html
@@ -52,160 +52,166 @@
     </div>
     <div class="wrapper">
       <!-- Navigasjon -->
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <a href="index.html" title="Hjem" class="main-nav-hjem fade"
-              >Hjem</a
-            >
-          </li>
-          <li>
-            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
-              >Portefølje</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
-              target="_blank"
-              title="CV"
-              rel="noreferrer"
-              class="main-nav-cv fade"
-              >CV</a
-            >
-          </li>
-          <li>
-            <a
-              href="kontakt.html"
-              title="Kontakt"
-              rel="noreferrer"
-              class="main-nav-kontakt fade"
-              >Kontakt</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <header>
+        <nav class="main-nav">
+          <ul>
+            <li>
+              <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+            </li>
+            <li>
+              <a
+                href="portefølje.html"
+                title="Om meg"
+                class="main-nav-ommeg fade"
+                >Portefølje</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+                target="_blank"
+                title="CV"
+                rel="noreferrer"
+                class="main-nav-cv fade"
+                >CV</a
+              >
+            </li>
+            <li>
+              <a
+                href="kontakt.html"
+                title="Kontakt"
+                rel="noreferrer"
+                class="main-nav-kontakt fade"
+                >Kontakt</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
 
       <!-- Portefølje -->
-      <section class="portfolio-header">
-        <h3>Javascript / React</h3>
-      </section>
+      <main>
+        <section class="portfolio-header">
+          <h3>Javascript / React</h3>
+        </section>
 
-      <section class="portfolio-header">
-        <h4>
-          Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i
-          nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet med
-          siden.
-        </h4>
-      </section>
+        <section class="portfolio-header">
+          <h4>
+            Nedenfor ser du noen eksempler på nettsider jeg har arbeidet med i
+            nyere tid. Merk at designet kan ha endret siden sist jeg arbeidet
+            med siden.
+          </h4>
+        </section>
 
-      <section class="portfolio">
-        <div class="boks port-1">
-          <i class="fab fa-js fa-4x"></i>
-          <h3>Statens Vegvesen</h3>
-          <a
-            href="https://sleepy-payne-cbfe8b.netlify.com/"
-            target="_blank"
-            title="Statens Vegvesen"
-            rel="noreferrer"
-            ><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"
-          /></a>
-          <p>
-            Henter kjøretøyinformasjon fra REST APIet hos
-            https://www.vegvesen.no og viser det.
-          </p>
-          <p>
-            Inneholder: Standard Javascript, Materialize CSS, Input validering,
-            Fetch API, jQuery.
-          </p>
-          <a
-            href="https://sleepy-payne-cbfe8b.netlify.com/"
-            target="_blank"
-            title="Statens Vegvesen"
-            rel="noreferrer"
-            class="btn fade"
-            >Besøk side</a
-          >
-        </div>
-        <div class="boks port-2 reveal">
-          <i class="fab fa-js fa-4x"></i>
-          <h3>Nettbutikk i React</h3>
-          <a
-            href="https://react-c776ed.netlify.com/"
-            target="_blank"
-            title="Nettbutikk i React"
-          >
-            <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"
-          /></a>
+        <section class="portfolio">
+          <div class="boks port-1">
+            <i class="fab fa-js fa-4x"></i>
+            <h3>Statens Vegvesen</h3>
+            <a
+              href="https://sleepy-payne-cbfe8b.netlify.com/"
+              target="_blank"
+              title="Statens Vegvesen"
+              rel="noreferrer"
+              ><img
+                src="./img/statens-vegvesen.jpg"
+                alt="Statens Vegvesen bilde"
+            /></a>
+            <p>
+              Henter kjøretøyinformasjon fra REST APIet hos
+              https://www.vegvesen.no og viser det.
+            </p>
+            <p>
+              Inneholder: Standard Javascript, Materialize CSS, Input
+              validering, Fetch API, jQuery.
+            </p>
+            <a
+              href="https://sleepy-payne-cbfe8b.netlify.com/"
+              target="_blank"
+              title="Statens Vegvesen"
+              rel="noreferrer"
+              class="btn fade"
+              >Besøk side</a
+            >
+          </div>
+          <div class="boks port-2 reveal">
+            <i class="fab fa-js fa-4x"></i>
+            <h3>Nettbutikk i React</h3>
+            <a
+              href="https://react-c776ed.netlify.com/"
+              target="_blank"
+              title="Nettbutikk i React"
+            >
+              <img src="./img/nettbutikk.jpg" alt="React Nettbutikk bilde"
+            /></a>
 
-          <p>Nettbutikk laget i React med Create React App.</p>
-          <p>
-            Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS,
-            Reselect med mer.
-          </p>
-          <a
-            href="https://react-c776ed.netlify.com/"
-            target="_blank"
-            title="Nettbutikk i React"
-            class="btn fade"
-            >Besøk side</a
-          >
-        </div>
-      </section>
-      <section class="portfolio-header">
-        <h3>Woocommerce</h3>
-      </section>
+            <p>Nettbutikk laget i React med Create React App.</p>
+            <p>
+              Inneholder: React, Firebase, Firestore, Stripe, Redux, CSS in JS,
+              Reselect med mer.
+            </p>
+            <a
+              href="https://react-c776ed.netlify.com/"
+              target="_blank"
+              title="Nettbutikk i React"
+              class="btn fade"
+              >Besøk side</a
+            >
+          </div>
+        </section>
+        <section class="portfolio-header">
+          <h3>Woocommerce</h3>
+        </section>
 
-      <section class="portfolio">
-        <div class="boks port-4 reveal">
-          <i class="fab fa-wordpress fa-4x"></i>
-          <h3>Style Child</h3>
-          <a
-            href="https://www.stylechild.no/"
-            target="_blank"
-            title="Style Child"
-            ><img src="./img/stylechild.jpg" alt="Style Child bilde"
-          /></a>
-          <p>Nettbutikk med Woocommerce og Pckasse integrasjon.</p>
-          <p>
-            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
-            mer.
-          </p>
-          <a
-            href="https://www.stylechild.no/"
-            target="_blank"
-            title="Style Child"
-            class="btn fade"
-            >Besøk side</a
-          >
-        </div>
+        <section class="portfolio">
+          <div class="boks port-4 reveal">
+            <i class="fab fa-wordpress fa-4x"></i>
+            <h3>Style Child</h3>
+            <a
+              href="https://www.stylechild.no/"
+              target="_blank"
+              title="Style Child"
+              ><img src="./img/stylechild.jpg" alt="Style Child bilde"
+            /></a>
+            <p>Nettbutikk med Woocommerce og Pckasse integrasjon.</p>
+            <p>
+              Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
+              mer.
+            </p>
+            <a
+              href="https://www.stylechild.no/"
+              target="_blank"
+              title="Style Child"
+              class="btn fade"
+              >Besøk side</a
+            >
+          </div>
 
-        <div class="boks port-5 reveal">
-          <i class="fab fa-wordpress fa-4x"></i>
-          <h3>Minhestebutikk</h3>
-          <a
-            href="https://minhestebutikk.no/"
-            target="_blank"
-            title="Minhestebutikk"
-            ><img src="./img/minhestebutikk.jpg" alt="Minhestebutikk bilde"
-          /></a>
-          <p>
-            Tidligere en nettbutikk med Magento 1.9, er nå nettbutikk med
-            Woocommerce og Pckasse integrasjon.
-          </p>
-          <p>
-            Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
-            mer.
-          </p>
-          <a
-            href="https://minhestebutikk.no/"
-            target="_blank"
-            title="Minhestebutikk"
-            class="btn fade"
-            >Besøk side</a
-          >
-        </div>
-        <!--
+          <div class="boks port-5 reveal">
+            <i class="fab fa-wordpress fa-4x"></i>
+            <h3>Minhestebutikk</h3>
+            <a
+              href="https://minhestebutikk.no/"
+              target="_blank"
+              title="Minhestebutikk"
+              ><img src="./img/minhestebutikk.jpg" alt="Minhestebutikk bilde"
+            /></a>
+            <p>
+              Tidligere en nettbutikk med Magento 1.9, er nå nettbutikk med
+              Woocommerce og Pckasse integrasjon.
+            </p>
+            <p>
+              Inneholder: Wordpress, Woocommerce, CSS3, Pckasse integrasjon med
+              mer.
+            </p>
+            <a
+              href="https://minhestebutikk.no/"
+              target="_blank"
+              title="Minhestebutikk"
+              class="btn fade"
+              >Besøk side</a
+            >
+          </div>
+          <!--
             <div class="boks port-6 reveal">
                 <i class="fab fa-js fa-4x"></i>
                 <h3>Statens Vegvesen</h3>
@@ -214,7 +220,8 @@
                 <p>Inneholder: Standard Javascript, Materialize CSS, Input validering, Fetch API, jQuery.</p>
                 <a href="https://github.com/w3bdesign/Statens-Vegvesen" target="_blank" alt="Statens Vegvesen" class="btn hvr-sweep-to-top">Les mer</a>
             </div>-->
-      </section>
+        </section>
+      </main>
 
       <!-- Bunn / footer -->
       <footer class="reveal">
