--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="article:published_time" content="2020-02-04" />
     <meta property="article:author" content="Daniel" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/all.min.css" /> 
+    <link rel="stylesheet" type="text/css" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/modern-normalize.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -51,143 +51,154 @@
       </h1>
     </div>
     <noscript>
-     <div class="noscript">Din nettleser støttter ikke Javascript.Vennligst bruk en annen nettleser for å se denne nettsiden optimalt.</div> 
+      <div class="noscript">
+        Din nettleser støttter ikke Javascript.Vennligst bruk en annen nettleser
+        for å se denne nettsiden optimalt.
+      </div>
     </noscript>
     <div class="wrapper">
       <!-- Navigasjon -->
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
-          </li>
-          <li>
-            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
-              >Portefølje</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
-              target="_blank"
-              title="CV"
-              rel="noreferrer"
-              class="main-nav-cv fade"
-              >CV</a
-            >
-          </li>
-          <li>
-            <a
-              href="kontakt.html"
-              title="Kontakt"
-              rel="noreferrer"
-              class="main-nav-kontakt fade"
-              >Kontakt</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <header>
+        <nav class="main-nav">
+          <ul>
+            <li>
+              <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+            </li>
+            <li>
+              <a
+                href="portefølje.html"
+                title="Om meg"
+                class="main-nav-ommeg fade"
+                >Portefølje</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+                target="_blank"
+                title="CV"
+                rel="noreferrer"
+                class="main-nav-cv fade"
+                >CV</a
+              >
+            </li>
+            <li>
+              <a
+                href="kontakt.html"
+                title="Kontakt"
+                rel="noreferrer"
+                class="main-nav-kontakt fade"
+                >Kontakt</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </header>
 
       <!-- Topp Kontainer -->
-      <section class="topp-kontainer">
-        <header class="showcase">
-          <h2>Hei!</h2>
-          <p>
-            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, mySQL,
-            Wordpress, HTML, CSS, Javascript, React, Redux, Docker og mye mer.
-          </p>
-          <p></p>
-        </header>
-      </section>
+      <main>
+        <section class="topp-kontainer">
+          <header class="showcase">
+            <h2>Hei!</h2>
+            <p>
+              Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP,
+              mySQL, Wordpress, HTML, CSS, Javascript, React, Redux, Docker og
+              mye mer.
+            </p>
+            <p></p>
+          </header>
+        </section>
 
-      <!-- Bokser Seksjon -->
-      <section id="reveal" class="bokser reveal">
-        <div id="boks" class="boks">
-          <h3>Om meg</h3>
-          <i class="fab fa-wordpress fa-4x"></i>
-          <i class="fab fa-js fa-4x"></i>
-          <i class="fab fa-html5 fa-4x"></i>
-          <i class="fab fa-css3 fa-4x"></i>
+        <!-- Bokser Seksjon -->
+        <section id="reveal" class="bokser reveal">
+          <div id="boks" class="boks">
+            <h3>Om meg</h3>
+            <i class="fab fa-wordpress fa-4x"></i>
+            <i class="fab fa-js fa-4x"></i>
+            <i class="fab fa-html5 fa-4x"></i>
+            <i class="fab fa-css3 fa-4x"></i>
 
-          <p>
-            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og Javascript.
-            Jeg har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg
-            har arbeidet frilans via
-            <a
-              href="https://www.fiverr.com/w3bdesign"
-              rel="noreferrer"
-              title="Fiverr"
-              >Fiverr</a
-            >
-            og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
-          </p>
-          <p>Har også erfaring med Opencart og Magento.</p>
+            <p>
+              Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og
+              Javascript. Jeg har arbeidet med Wordpress og Woocommerce siden
+              2011 hvor jeg har arbeidet frilans via
+              <a
+                href="https://www.fiverr.com/w3bdesign"
+                rel="noreferrer"
+                title="Fiverr"
+                >Fiverr</a
+              >
+              og kan skilte med 100% positiv tilbakemelding på samtlige oppdrag.
+            </p>
+            <p>Har også erfaring med Opencart og Magento.</p>
 
-          <p>
-            Jeg har også erfaring med andre teknologier som React, moderne
-            Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
-            med mer.
-          </p>
-          <p>
-            På
-            <a
-              href="portefølje.html"
-              title="Portefølje link"
-              rel="noreferrer"
-              aria-label="Portefølje link"
-              >Portefølje</a
-            >
-            kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
-          </p>
-        </div>
+            <p>
+              Jeg har også erfaring med andre teknologier som React, moderne
+              Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios,
+              Docker med mer.
+            </p>
+            <p>
+              På
+              <a
+                href="portefølje.html"
+                title="Portefølje link"
+                rel="noreferrer"
+                aria-label="Portefølje link"
+                >Portefølje</a
+              >
+              kan du se eksempler på arbeid jeg har gjort i 2019 og 2020.
+            </p>
+          </div>
 
-        <div class="top-box top-box-a reveal">
-          <h3>Github / Linkedin</h3>
-          <a
-            href="https://github.com/w3bdesign"
-            target="_blank"
-            title="Github"
-            rel="noreferrer"
-            aria-label="Github"
-            ><i class="fab fa-github fa-4x"></i
-          ></a>
-
-          <a
-            href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
-            target="_blank"
-            title="Linkedin"
-            rel="noreferrer"
-            aria-label="Linkedin"
-            ><i class="fab fa-linkedin fa-4x"></i
-          ></a>
-          <p>
-            Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis du
-            er interessert kan du ta en titt
+          <div class="top-box top-box-a reveal">
+            <h3>Github / Linkedin</h3>
             <a
               href="https://github.com/w3bdesign"
               target="_blank"
               title="Github"
               rel="noreferrer"
               aria-label="Github"
-            >
-              HER</a
-            >
-          </p>
+              ><i class="fab fa-github fa-4x"></i
+            ></a>
 
-          <p>
-            Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin
-            konto
             <a
               href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
               target="_blank"
               title="Linkedin"
               rel="noreferrer"
               aria-label="Linkedin"
-            >
-              HER</a
-            >
-          </p>
-        </div>
-      </section>
+              ><i class="fab fa-linkedin fa-4x"></i
+            ></a>
+            <p>
+              Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis
+              du er interessert kan du ta en titt
+              <a
+                href="https://github.com/w3bdesign"
+                target="_blank"
+                title="Github"
+                rel="noreferrer"
+                aria-label="Github"
+              >
+                HER</a
+              >
+            </p>
+
+            <p>
+              Hvis du ønsker å se min oppdaterte CV kan du besøke min Linkedin
+              konto
+              <a
+                href="https://www.linkedin.com/in/daniel-fjeldstad-1947a043/"
+                target="_blank"
+                title="Linkedin"
+                rel="noreferrer"
+                aria-label="Linkedin"
+              >
+                HER</a
+              >
+            </p>
+          </div>
+        </section>
+      </main>
 
       <!-- Bunn / footer -->
       <footer class="reveal">
