--- a/kontakt.html
+++ b/kontakt.html
@@ -55,7 +55,7 @@
     <div class="wrapper">
       <!-- Navigasjon -->
      
-        <nav class="main-nav">
+        <nav class="main-nav" style="opacity: 1 !important;">
           <ul>
             <li>
               <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
