--- a/kontakt.html
+++ b/kontakt.html
@@ -58,7 +58,7 @@
         <nav class="main-nav" style="opacity: 1 !important;">
           <ul>
             <li>
-              <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+              <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
             </li>
             <li>
               <a
