--- a/portefølje.html
+++ b/portefølje.html
@@ -56,7 +56,7 @@
         <nav class="main-nav">
           <ul>
             <li>
-              <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+              <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
             </li>
             <li>
               <a
