--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="article:author" content="Daniel" />
     <link rel="stylesheet" type="text/css" href="scss/styles.min.css" />
     <link rel="stylesheet" type="text/css" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/modern-normalize.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/modern-normalize.min.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
@@ -208,13 +208,13 @@
     <!-- Wrapper Slutt -->
 
     <!-- Inkluder GSAP for animasjoner -->
-    <script src="./js/gsap.min.js"></script>
+    <script src="./js/gsap.min.js" defer></script>
 
     <!-- Inkluder ScrollMagic -->
-    <script src="./js/ScrollMagic.min.js"></script>
-    <script src="./js/animation.gsap.min.js"></script>
+    <script src="./js/ScrollMagic.min.js" defer></script>
+    <script src="./js/animation.gsap.min.js" defer></script>
 
     <!-- Animasjoner -->
-    <script src="./js/animation.js"></script>
+    <script src="./js/animation.js" defer></script>
   </body>
 </html>
