--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
     <!-- Wrapper Slutt -->
 
     <!-- Inkluder GSAP for animasjoner -->
-    <script src="./js/gsap.min.js" defer></script>
+    <script src="./js/gsap.min.js"></script>
 
     <!-- Inkluder ScrollMagic -->
-    <script src="./js/ScrollMagic.min.js" defer></script>
-    <script src="./js/animation.gsap.min.js" defer></script>
+    <script src="./js/ScrollMagic.min.js"></script>
+    <script src="./js/animation.gsap.min.js"></script>
 
     <!-- Animasjoner -->
-    <script src="./js/animation.js" defer></script>
+    <script src="./js/animation.js"></script>
   </body>
 </html>
